2024-01-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha04: Heritage BBQ';git push
	git tag -a 5.2.0-alpha04 -m '';git push --tags

	* NCO 5.2.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha03: Sunrise Snatchers';git push
	git tag -a 5.2.0-alpha03 -m 'all: 2024; ncclimo: refactor for tms inp_aut, fix Dec clm_bnd in djf mode, fix inp_glb;ncclimo/ncremap: [-f $fl] || [-L $fl], dpr ALCF mch';git push --tags

2024-01-05  Charlie Zender  <zender@uci.edu>

	* Update documentation dates and copyright notice to 2024

2024-01-03  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap Deprecate ALCF Cooley, Mira, Theta machines and Cobalt batch scheduler instructions

2023-12-30  Charlie Zender  <zender@uci.edu>

	* Verify globbing for input files works

	* ncclimo/ncremap: Use test -f || test -L (true if file or link) instead of test -f to test for file existance

2023-12-22  Charlie Zender  <zender@uci.edu>

	* Combine inp_aut filename generation for annual files with monthly files

2023-12-21  Charlie Zender  <zender@uci.edu>

	* Fix climatology bounds for climatological December in DJF mode for monthly climos

	* Start branch csz_ncclimo with unified inp_aut filename generator for climos and timeseries

2023-12-15  Charlie Zender  <zender@uci.edu>

	* nco_chk_tm() successfully identifies violations via two methods

	* Add nco_chk_tm() stubs to check time coordinates for double precision

2023-12-06  Charlie Zender  <zender@uci.edu>

	* Assign NETCDF_ROOT in configure.eg instead of bashrc (fixes Chrysalis build)

	* configure.ac: Add *_INC diagnostics to trace mangling of CPPFLAGS

	* NCO 5.2.0-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha02: Lysanne-a-thon';git push
	git tag -a 5.2.0-alpha02 -m 'ncks: nco_chk_bnd(); ncremap: trfv2';git push --tags

	* ncks: nco_chk_???() print full-names only when variable or group is not at root level
