@@ -51,9 +51,9 @@
 # scp ~/nco/data/ncremap zender1@acme1.llnl.gov:bin
 # scp ~/nco/data/ncremap andes.olcf.ornl.gov:bin_andes
 # scp ~/nco/data/ncremap ac.zender@blues.lcrc.anl.gov:bin_blues
-# scp ~/nco/data/ncremap cheyenne.ucar.edu:bin
 # scp ~/nco/data/ncremap ac.zender@chrysalis.lcrc.anl.gov:bin_chrysalis
 # scp ~/nco/data/ncremap compy.pnl.gov:bin
+# scp ~/nco/data/ncremap derecho.hpc.ucar.edu:bin
 # scp ~/nco/data/ncremap dust.ess.uci.edu:bin
 # scp ~/nco/data/ncremap e3sm.ess.uci.edu:bin
 # scp ~/nco/data/ncremap frontier.olcf.ornl.gov:bin_frontier
