@@ -1,1 +1,1 @@
-5.2.0-alpha03
+5.2.0-alpha04
