@@ -128,11 +128,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.2.0-alpha03
-@set doc-edition 5.2.0-alpha03
+@set nco-edition 5.2.0-alpha04
+@set doc-edition 5.2.0-alpha04
 @set copyright-years 1995--2024
 @set update-year 2023
-@set update-date 5 January 2024
+@set update-date 7 January 2024
 @set update-month January 2024
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
